{
  "version": 4,
  "terraform_version": "1.2.8",
  "serial": 23,
  "lineage": "27b1b9d0-9d99-3c4f-7774-174086992290",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "ElasticLoadBalancingV2LoadBalancer",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:385501908346:loadbalancer/app/test-alb/e62052f1535f3761",
            "arn_suffix": "app/test-alb/e62052f1535f3761",
            "desync_mitigation_mode": "defensive",
            "dns_name": "test-alb-2087318480.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_waf_fail_open": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:385501908346:loadbalancer/app/test-alb/e62052f1535f3761",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "test-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-04fb2f23d9e16ea24"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-094e16ce489053244"
              },
              {
                "subnet_id": "subnet-0f4bac046a399c023"
              }
            ],
            "subnets": [
              "subnet-094e16ce489053244",
              "subnet-0f4bac046a399c023"
            ],
            "vpc_id": "vpc-039e5e54a507544ec",
            "zone_id": "Z35SXDOTRQ7X7K"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "ElasticLoadBalancingV2Listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:385501908346:listener/app/test-alb/e62052f1535f3761/3a37d0ec5e87e1fc",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [
                  {
                    "content_type": "text/plain",
                    "message_body": "",
                    "status_code": "404"
                  }
                ],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "",
                "type": "fixed-response"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:385501908346:listener/app/test-alb/e62052f1535f3761/3a37d0ec5e87e1fc",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:385501908346:loadbalancer/app/test-alb/e62052f1535f3761",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.ElasticLoadBalancingV2LoadBalancer"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "ElasticLoadBalancingV2ListenerRule",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:385501908346:targetgroup/products-service-target-group/623025c9385fcf39",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:385501908346:listener-rule/app/test-alb/e62052f1535f3761/3a37d0ec5e87e1fc/62c1cf87bd0ec3a1",
            "condition": [
              {
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [
                  {
                    "values": [
                      "*/api/product/*"
                    ]
                  }
                ],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:385501908346:listener-rule/app/test-alb/e62052f1535f3761/3a37d0ec5e87e1fc/62c1cf87bd0ec3a1",
            "listener_arn": "arn:aws:elasticloadbalancing:us-east-1:385501908346:listener/app/test-alb/e62052f1535f3761/3a37d0ec5e87e1fc",
            "priority": 1,
            "tags": null,
            "tags_all": {}
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.ElasticLoadBalancingV2LoadBalancer",
            "aws_lb_listener.ElasticLoadBalancingV2Listener"
          ]
        }
      ]
    }
  ]
}